objects/zkfedex__ShipmatePreference__c.object
<CustomObject>
    <customHelpPage>zkfedex__shipmatePreferenceHelp</customHelpPage>
    <description>Shipmate Preferences store your FedEx Account number which is associated to all of your FedEx shipments.</description>
    <fields>
        <fullName>zkfedex__BillingCity__c</fullName>
        <label>Billing City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BillingPostalCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BillingState__c</fullName>
        <label>Billing State</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__BillingStreet__c</fullName>
        <description>Can enter up to 2 separate lines.
Each line can be 35 characters at most.</description>
        <inlineHelpText>Can enter up to 2 separate lines.
Each line can be 35 characters at most.</inlineHelpText>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DetailedViewReUsePackageList__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This option allows you to display more details in the drop down list when selecting a Package Profile for ReUse in the Shipping Wizard. This drop down list only appears on Package section of the Shipping Wizard if a saved Package for ReUse exists.</description>
        <inlineHelpText>This option allows you to display more details in the drop down list when selecting a Package Profile for ReUse in the Shipping Wizard. This drop down list only appears on Package section of the Shipping Wizard if a saved Package for ReUse exists.</inlineHelpText>
        <label>Detailed View - ReUse Package List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__DetailedViewShipmatePreferenceList__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This option allows you to display more details in the drop down list when selecting the Shipmate Preference in the Shipping Wizard. This drop down list only appears on Preference Section of the Shipping Wizard if you have more than one Shipmate Preference.</description>
        <inlineHelpText>This option allows you to display more details in the drop down list when selecting the Shipmate Preference in the Shipping Wizard. This drop down list only appears on Preference Section of the Shipping Wizard if you have more than one Shipmate Preference</inlineHelpText>
        <label>Detailed View - Shipmate Preference List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailMessageDefault__c</fullName>
        <label>Email Message Default</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailNotifyOnDeliveryDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when the shipment is delivered.</description>
        <inlineHelpText>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when the shipment is delivered.</inlineHelpText>
        <label>Email Notify on Delivery Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__EMailNotifyOnExceptionDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when an shipping exception occurs.</description>
        <inlineHelpText>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when an shipping exception occurs.</inlineHelpText>
        <label>Email Notify on Exception Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailLabelReplyToEmailDefault__c</fullName>
        <description>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</inlineHelpText>
        <label>Email Label Reply-To Email Default</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailLabelSenderDisplayNameDefault__c</fullName>
        <description>For completed Shipments, this will be the default sender display name when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default sender display name when sending shipping labels via email</inlineHelpText>
        <label>Email Label Sender Display Name Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailLabelSubjectLineDefault__c</fullName>
        <description>For completed Shipments, this will be the default email subject line when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default email subject line when sending shipping labels via email</inlineHelpText>
        <label>Email Label Subject Line Default</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EmailLabelTextBodyDefault__c</fullName>
        <description>For completed Shipments, this will be the default email body when sending shipping labels via email</description>
        <inlineHelpText>For completed Shipments, this will be the default email body when sending shipping labels via email</inlineHelpText>
        <label>Email Label Text Body Default</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__EncryptedFedExMeterNumber__c</fullName>
        <label>Encrypted FedEx Meter Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EncryptedGenericFedExEndUserKey__c</fullName>
        <label>Encrypted Generic FedEx End User Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EncryptedGenericFedExEndUserPasswd__c</fullName>
        <label>Encrypted Generic FedEx End User Passwd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__FedExAccountNumber__c</fullName>
        <label>FedEx Account Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__FedExMeterNumber__c</fullName>
        <label>FedEx Meter Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__GenericCredentialsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generic Credentials Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__GenericFedExEndUserKey__c</fullName>
        <label>Generic FedEx End User Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__GenericFedExEndUserPassword__c</fullName>
        <label>Generic FedEx End User Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__LabelImageTypeDefault__c</fullName>
        <label>Label Image Type Default</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>PNG</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - Eltron</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6 - Zebra</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6.75 - Eltron</fullName>
                </value>
                <value>
                    <fullName>Thermal 4x6.75 - Zebra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__LastClosePerformedAt__c</fullName>
        <label>Last Close Performed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkfedex__LastCloseTimestamp__c</fullName>
        <label>Last Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkfedex__LastVersionCaptureTime__c</fullName>
        <description>The last successful time &apos;version capture&apos; was performed.</description>
        <inlineHelpText>The last successful time &apos;version capture&apos; was performed.</inlineHelpText>
        <label>Last Version Capture Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkfedex__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SendEMailNotificationToRecipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the default action will be to send the FedEx Email notification to the recipient.</description>
        <inlineHelpText>If checked, the default action will be to send the FedEx Email notification to the recipient.</inlineHelpText>
        <label>Send Email Notification to Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__SendEMailNotificationToShipper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the default action will be to send the FedEx Email notification to you, the shipper.</description>
        <inlineHelpText>If checked, the default action will be to send the FedEx Email notification to you, the shipper.</inlineHelpText>
        <label>Send Email Notification to Shipper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderEMailDefault__c</fullName>
        <description>If specified, the Sender Email will be defaulted to this value for all users. Otherwise, the Sender Email will be the Email address of the user.</description>
        <inlineHelpText>If specified, the Sender Email will be defaulted to this value for all users. Otherwise, the Sender Email will be the Email address of the user.</inlineHelpText>
        <label>Sender Email Default</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderNameDefault__c</fullName>
        <description>If specified, the sender name will be defaulted to this value for all users. Otherwise, the sender name will be the name of the user.</description>
        <inlineHelpText>If specified, the sender name will be defaulted to this value for all users. Otherwise, the sender name will be the name of the user.</inlineHelpText>
        <label>Sender Name Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__SenderPhoneDefault__c</fullName>
        <description>If specified, the sender phone will be defaulted to this value for all users. Otherwise, the sender phone will be the phone number of the user.</description>
        <inlineHelpText>If specified, the sender phone will be defaulted to this value for all users. Otherwise, the sender phone will be the phone number of the user.</inlineHelpText>
        <label>Sender Phone Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShippingIsResidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShippingPostalCode__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShippingState__c</fullName>
        <label>Shipping State</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ShippingStreet__c</fullName>
        <description>Can enter up to 2 separate lines.
Each line can be 35 characters at most.</description>
        <inlineHelpText>Can enter up to 2 separate lines.
Each line can be 35 characters at most.</inlineHelpText>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkfedex__SubscriptionDataEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Data Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__ThermalPrinterName__c</fullName>
        <description>Specify if using a Thermal printer. The name given to the printer when installed. In Windows, this is the name listed for your thermal printer under &quot;Printers and Faxes&quot;.</description>
        <inlineHelpText>Specify if using a Thermal printer. The name given to the printer when installed. In Windows, this is the name listed for your thermal printer under &quot;Printers and Faxes&quot;.</inlineHelpText>
        <label>Thermal Printer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__VersionCaptureReminderSet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Version Capture Reminder Set</label>
        <type>Checkbox</type>
    </fields>
    <label>FedEx Shipmate Preference</label>
    <listViews>
        <fullName>Nolan_Daigle_ShipmatePreference</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkfedex__All</fullName>
        <columns>NAME</columns>
        <columns>zkfedex__FedExAccountNumber__c</columns>
        <columns>zkfedex__ShippingStreet__c</columns>
        <columns>zkfedex__ShippingCity__c</columns>
        <columns>zkfedex__ShippingState__c</columns>
        <columns>zkfedex__ShippingPostalCode__c</columns>
        <columns>zkfedex__LastClosePerformedAt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ShipmatePreference-{0000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Shipmate Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>